--- a/其他/分布式架构设计与实践.md
+++ b/其他/分布式架构设计与实践.md
@@ -1,4 +1,4 @@
-## 分布式锁
+### 分布式锁
 
 ### 分布式锁的设计原则
 
@@ -6,4 +6,23 @@
 - 容错性，即使某一个持有锁的线程，异常退出，其他线程仍可获得锁 
 - 隔离性，线程只能解自己的锁，不能解其他线程的锁 
 
- 
+ ### 系统稳定性
+
+#### 日志监控
+
+查看请求访问量
+
+```bash
+cat access.log | cut -f1 -d "" | sort |uniq -c | sork -k l -n -r | head -10
+```
+
+查看最耗时页面
+
+```bash
+cat access.log | sork -k 2 -n -r | head -10
+```
+
+
+
+
+
