--- a/其他/分布式架构设计与实践.md
+++ b/其他/分布式架构设计与实践.md
@@ -13,13 +13,13 @@
 查看请求访问量
 
 ```bash
-cat access.log | cut -f1 -d "" | sort |uniq -c | sork -k l -n -r | head -10
+cat access.log | cut -f1 -d " " | sort |uniq -c | sort -k 1 -n -r | head -10
 ```
 
 查看最耗时页面
 
 ```bash
-cat access.log | sork -k 2 -n -r | head -10
+cat access.log | sort -k 2 -n -r | head -10
 ```
 
 
