--- a/其他/分布式架构设计与实践.md
+++ b/其他/分布式架构设计与实践.md
@@ -22,7 +22,19 @@ cat access.log | cut -f1 -d " " | sort |uniq -c | sort -k 1 -n -r | head -10
 cat access.log | sort -k 2 -n -r | head -10
 ```
 
+#### 系统监控
 
+查看内存使用多的进程
+
+```bash
+ps aux | sort -k4nr | head -n 10
+```
+
+查看cpu使用多的进程
+
+```bash
+ps aux | sort -k3nr | head -n 10
+```
 
 
 
