--- a/其他/分布式架构设计与实践.md
+++ b/其他/分布式架构设计与实践.md
@@ -1,3 +1,5 @@
+
+
 ### 分布式锁
 
 ### 分布式锁的设计原则
@@ -34,6 +36,19 @@ ps aux | sort -k4nr | head -n 10
 
 ```bash
 ps aux | sort -k3nr | head -n 10
+```
+
+查看程序端口占用情况
+
+
+```bash
+netstat –apn
+```
+
+查看iptables配置
+
+```bash
+iptables-save
 ```
 
 ### 数据库设计
