--- a/其他/分布式架构设计与实践.md
+++ b/其他/分布式架构设计与实践.md
@@ -45,6 +45,15 @@ ps aux | sort -k3nr | head -n 10
 netstat –apn
 ```
 
+查看TCP的连接状态
+
+> TCP 本地端口数量，上限为 `65535`（6.5w），这是因为 TCP 头部使用 `16 bit`，存储「**端口号**」，因此约束上限为 `65535`。
+
+```bash
+netstat -n | awk '/^tcp/ {++S[$NF]} END {for(a in S) print a, S[a]}'
+netstat -nat |grep TIME_WAIT
+```
+
 查看iptables配置
 
 ```bash
