--- a/测试监控/测试工具.md
+++ b/测试监控/测试工具.md
@@ -50,3 +50,19 @@ Requests/sec和Transfer/sec：
 
 
 
+### curl
+
+```bash
+# 参数输出通信的整个过程，用于调试。
+curl -v 
+```
+
+
+
+```bash
+# 网络请求耗时
+curl -w %{time_namelookup}::%{time_connect}::%{time_starttransfer}::%{time_total}
+```
+
+
+
