--- a/其他/分布式协议.md
+++ b/其他/分布式协议.md
@@ -6,8 +6,6 @@ CAP 理论对分布式系统的特性做了高度抽象，形成了三个指标:
 - 可用性（Availability）
 - 分区容错性（Partition Tolerance）
 
-
-
 ### Paxos算法
 
 ####Base-Paxos
@@ -46,7 +44,71 @@ Base-Paxos通过二阶段提交的方式来达成共识：
 
 ### Raft算法
 
+>Raft 算法是通过一切以领导者为准的方式，实现一系列值的共识和各节点日志的一致。
 
+***领导者选举***
+
+> 在 Raft 中，不是所有节点都能当选领导者，只有日志较完整的节点（也就是日志完整度不比半数节点低的节点），才能当选领导者；其次，在 Raft 中，日志必须是连续的。
+
+成员身份：领导者、跟随者、候选人
+
+**跟随者**：默默地接收和处理来自领导者的消息，当等待领导者心跳信息超时的时候，就主动站出来，推荐自己当候选人。
+
+**候选人**：候选人将向其他节点发送请求投票RPC 消息，通知其他节点来投票，如果赢得了大多数选票，就晋升当领导者。
+
+**领导者**：主要工作内容就是 3 部分，处理写请求、管理日志复制和不断地发送心跳信息，通知其他节点“我是领导者，我还活着，你们现在不要发起新的选举，找个新领导者来替代我。”
+
+Raft 算法实现了随机超时时间的特性。也就是说，每个节点等待领导者节点心跳信息的超时时间间隔是随机的。
+
+节点通讯
+
+服务器节点间的沟通联络采用的是远程过程调用（RPC)，在领导者选举中，需要用到这样两类的 RPC：
+
+- 请求投票（RequestVote）RPC，是由候选人在选举期间发起，通知各节点进行投票；
+- 日志复制（AppendEntries）RPC，是由领导者发起，用来复制日志和提供心跳消息。(日志复制 RPC 只能由领导者发起)
+
+任期
+
+Raft 算法中的领导者也是有任期的，每个任期由单调递增的数字（任期编号）标识。
+
+Raft 算法中的任期不只是时间段，而且任期编号的大小，会影响领导者选举和请求的处理。
+
+- 约定如果一个候选人或者领导者，发现自己的任期编号比其他节点小，那么它会立即恢复成跟随者状态。比如分区错误恢复后，任期编号为 3 的领导者节点 B，收到来自新领导者的，包含任期编号为 4 的心跳消息，那么节点 B 将立即恢复成跟随者状态。
+- 约定如果一个节点接收到一个包含较小的任期编号值的请求，那么它会直接拒绝这个请求。比如节点 C 的任期编号为 4，收到包含任期编号为 3 的请求投票 RPC 消息，那么它将拒绝这个消息。
+
+选举规则
+
+- 领导者周期性地向所有跟随者发送心跳消息（即不包含日志项的日志复制 RPC 消息），通知大家我是领导者，阻止跟随者发起新的选举。
+- 如果在指定时间内，跟随者没有接收到来自领导者的消息，那么它就认为当前没有领导者，推举自己为候选人，发起领导者选举。
+- 在一次选举中，赢得大多数选票的候选人，将晋升为领导者。
+- 在一个任期内，领导者一直都会是领导者，直到它自身出现问题（比如宕机），或者因为网络延迟，其他节点发起一轮新的选举。
+- 在一次选举中，每一个服务器节点最多会对一个任期编号投出一张选票，并且按照“先来先服务”的原则进行投票。
+- 日志完整性高的跟随者（也就是最后一条日志项对应的任期编号值更大，索引号更大），拒绝投票给日志完整性低的候选人。
+
+  随机超时
+
+ 使用随机选举超时时间的方法，把超时时间都分散开来，在大多数情况下只有一个服务器节点先发起选举，而不是同时发起选举，这样就能减少因选票瓜分导致选举失败的情况。
+
+- 跟随者等待领导者心跳信息超时的时间间隔，是随机的；
+- 如果候选人在一个随机时间间隔内，没有赢得过半票数，那么选举无效了，然后候选人发起新一轮的选举，等待选举超时的时间间隔，是随机的。
+
+***日志复制***
+
+> 副本数据是以日志的形式存在的，日志是由日志项组成。日志项是一种数据格式，它主要包含用户指定的数据，也就是指令（Command），还包含一些附加信息，比如索引值（Log index）、任期编号（Term）。
+
+Raft 的日志复制理解成一个优化后的二阶段提交（将二阶段优化成了一阶段），减少了一半的往返消息，也就是降低了一半的消息延迟。
+
+>二阶段是要所有的节点回复，而raft 只要半数节点回复就ok 减少了一部分等待时间。
+
+- 接收到客户端请求后，领导者基于客户端请求中的指令，创建一个新日志项，并附加到本地日志中。
+- 领导者通过日志复制 RPC，将新的日志项复制到其他的服务器。
+- 当领导者将日志项，成功复制到大多数的服务器上的时候，领导者会将这条日志项应用到它的状态机中。
+- 领导者将执行的结果返回给客户端。
+- 当跟随者接收到心跳信息，或者新的日志复制 RPC 消息后，如果跟随者发现领导者已经提交了某条日志项，而它还没应用，那么跟随者就将这条日志项应用到本地的状态机中。
+
+***成员变更***
+
+单节点变更是利用“一次变更一个节点，不会同时存在旧配置和新配置 2 个‘大多数’”的特性，实现成员变更。
 
 ### ZAB协议
 
