--- a/中间件/zookeeper/分布式协议.md
+++ b/中间件/zookeeper/分布式协议.md
@@ -6,6 +6,20 @@ CAP 理论对分布式系统的特性做了高度抽象，形成了三个指标:
 - 可用性（Availability）
 - 分区容错性（Partition Tolerance）
 
+### BASE理论
+
+- 基本可用
+
+  - 流量削峰
+  - 延迟响应
+  - 体验降级
+  - 过载保护
+
+- 最终一致性
+
+  系统中所有的数据副本在经过一段时间的同步后，最终能够达到一个一致的状态。
+
+
 ### Paxos算法
 
 ####Base-Paxos
