--- a/DDD/领域驱动设计.md
+++ b/DDD/领域驱动设计.md
@@ -134,3 +134,5 @@ import com.company.team.bussiness.lottery.repo.repository.DrawLotteryRepository;
 - 需要将外部上下文中的模型翻译成本上下文理解的模型。
 - 不同上下文之间的团队协作关系，如果是供奉者关系，建议引入防腐层，避免外部上下文变化对本上下文的侵蚀。
 - 该访问本上下文使用广泛，为了避免改动影响范围过大。
+
+总结：领域行为封装到领域对象中，将资源管理行为封装到资源库中，将外部上下文的交互行为封装到防腐层中。
