--- a/其他/限流算法.md
+++ b/其他/限流算法.md
@@ -14,3 +14,11 @@
 
 **思路**：匀速的产生令牌，往桶里面丢，每次请求来，看是否有多余的令牌。如果有获取令牌执行正常业务，偌没有限速。 [![令牌桶.png](https://github.com/hirudy/java_lib/raw/master/doc/limiter/token_bucket.png)](https://github.com/hirudy/java_lib/blob/master/doc/limiter/token_bucket.png)
 
+#### 漏桶 VS 令牌桶
+
+漏桶算法和令牌桶算法本质上是为了做流量整形或速率限制，避免系统因为大流量而被打崩，但是两者的核心差异在于限流的方向是相反的：
+
+- 漏桶：限制的是流量的流出速率，是相对固定的。
+- 令牌桶 ：限制的是流量的平均流入速率，并且允许一定程度的突然性流量，最大速率为桶的容量和生成token的速率。
+
+在某些场景中，漏桶算法并不能有效的使用网络资源，因为漏桶的漏出速率是相对固定的，所以在网络情况比较好并且没有拥塞的状态下，漏桶依然是会有限制的，并不能放开量，因此并不能有效的利用网络资源。而令牌桶算法则不同，其在限制平均速率的同时，支持一定程度的突发流量。
